--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding login-page">
+  <div class="logo-container">
+    <img src="assets/secupasslogo.png" alt="Logo" class="logo" />
+  </div>
+  <div class="text-center">
+    <h1 class="title">SecuPass</h1>
+    <h2 class="subtitle">Login</h2>
+  </div>
+  <form>
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" placeholder="Enter your email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password" placeholder="Enter your password"></ion-input>
+    </ion-item>
+    <div class="buttons">
+      <ion-button expand="block" fill="clear" color="secondary">
+        Ir a registro
+      </ion-button>
+      <ion-button expand="block" color="tertiary">Logearse</ion-button>
+    </div>
+  </form>
 </ion-content>
