--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,14 +9,14 @@
   <form>
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" placeholder="Enter your email"></ion-input>
+      <ion-input type="email" placeholder="Ingresa tu gmail"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" placeholder="Enter your password"></ion-input>
+      <ion-input type="password" placeholder="Ingresa tu password"></ion-input>
     </ion-item>
     <div class="buttons">
-      <ion-button expand="block" fill="clear" color="secondary">
+      <ion-button expand="block" fill="clear" color="secondary" routerLink="/registro">
         Ir a registro
       </ion-button>
       <ion-button expand="block" color="tertiary">Logearse</ion-button>
