--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,13 +1,35 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>registro</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">registro</ion-title>
+<ion-content class="ion-padding register-page">
+  <!-- Botón para regresar al login -->
+  <ion-header translucent>
+    <ion-toolbar class="header-toolbar">
+      <ion-buttons slot="start">
+        <ion-button routerLink="/login">
+          <ion-icon name="arrow-back-outline"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
+
+  <!-- Contenido de la página -->
+  <div class="logo-container">
+    <img src="assets/secupasslogo.png" alt="Logo" class="logo" />
+  </div>
+  <div class="text-center">
+    <h1 class="title">SecuPass</h1>
+    <h2 class="subtitle">Registro</h2>
+  </div>
+  <form>
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" placeholder="Ingresa tu email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Password</ion-label>
+      <ion-input type="password" placeholder="Ingresa tu password"></ion-input>
+    </ion-item>
+    <div class="buttons">
+      <ion-button expand="block" color="tertiary">Registrarse</ion-button>
+    </div>
+  </form>
 </ion-content>
+
