redireccion momentanea en el boton de logearse

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -19,7 +19,7 @@
       <ion-button expand="block" fill="clear" color="secondary" routerLink="/registro">
         Ir a registro
       </ion-button>
-      <ion-button expand="block" color="tertiary">Logearse</ion-button>
+      <ion-button expand="block" color="tertiary" routerLink="/tabla">Logearse</ion-button>
     </div>
   </form>
 </ion-content>
