adicion de redireccionamiento a pagina usuario en el icono usuario

--- a/src/app/tabla/tabla.page.html
+++ b/src/app/tabla/tabla.page.html
@@ -4,7 +4,7 @@
     <ion-toolbar class="header-toolbar">
       <!-- Ícono de usuario en la esquina izquierda -->
       <ion-buttons slot="start">
-        <ion-button>
+        <ion-button routerLink="/usuario">
           <ion-icon name="person-circle-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
