--- a/src/app/tabla/tabla.page.scss
+++ b/src/app/tabla/tabla.page.scss
@@ -19,6 +19,11 @@
           margin-bottom: 5px;
         }
       }
+
+      ion-buttons ion-icon {
+        font-size: 1.8rem;
+        color: white;
+      }
     }
   
     /* Estilo de la tabla */
