--- a/src/app/tabla/tabla.page.html
+++ b/src/app/tabla/tabla.page.html
@@ -15,7 +15,7 @@
       </ion-title>
       <!-- Botón de cerrar sesión -->
       <ion-buttons slot="end">
-        <ion-button color="danger">
+        <ion-button color="danger" routerLink="/login">
           <ion-icon name="log-out-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
