adicion de redireccionamiento en el boton agregar contraseña

--- a/src/app/tabla/tabla.page.html
+++ b/src/app/tabla/tabla.page.html
@@ -41,7 +41,7 @@
     </ion-grid>
     <!-- Botón de agregar contraseña -->
     <div class="add-button">
-      <ion-button expand="block" color="primary">
+      <ion-button expand="block" color="primary" routerLink="/generar">
         Agregar Contraseña
       </ion-button>
     </div>
