--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,11 +9,11 @@
   <form>
     <ion-item>
       <ion-label position="floating">Username</ion-label>
-      <ion-input [(ngModel)]="username" type="text" placeholder="Ingresa tu username"></ion-input>
+      <ion-input [(ngModel)]="username" name="username" type="text" placeholder="Ingresa tu username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input [(ngModel)]="password" type="password" placeholder="Ingresa tu password"></ion-input>
+      <ion-input [(ngModel)]="password" name="username" type="password" placeholder="Ingresa tu password"></ion-input>
     </ion-item>
     <div class="buttons">
       <ion-button expand="block" fill="clear" color="secondary" routerLink="/registro">
