--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -20,12 +20,16 @@
   </div>
   <form>
     <ion-item>
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" placeholder="Ingresa tu email"></ion-input>
+      <ion-label position="floating">Username</ion-label>
+      <ion-input type="text" placeholder="Ingresa tu nombre de usuario"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
       <ion-input type="password" placeholder="Ingresa tu password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" placeholder="Ingresa tu email"></ion-input>
     </ion-item>
     <div class="buttons">
       <ion-button expand="block" color="tertiary">Registrarse</ion-button>
