--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -21,18 +21,18 @@
   <form>
     <ion-item>
       <ion-label position="floating">Username</ion-label>
-      <ion-input type="text" placeholder="Ingresa tu nombre de usuario"></ion-input>
+      <ion-input [(ngModel)]="username" name="username" type="text" placeholder="Ingresa tu nombre de usuario"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" placeholder="Ingresa tu password"></ion-input>
+      <ion-input [(ngModel)]="password" name="password" type="password" placeholder="Ingresa tu password"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" placeholder="Ingresa tu email"></ion-input>
+      <ion-input [(ngModel)]="correo" name="correo" type="email" placeholder="Ingresa tu email"></ion-input>
     </ion-item>
     <div class="buttons">
-      <ion-button expand="block" color="tertiary">Registrarse</ion-button>
+      <ion-button expand="block" color="tertiary" (click)="register()">Registrarse</ion-button>
     </div>
   </form>
 </ion-content>
